--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,23 @@
   font-family: "Lato", "Playfair Display";
   src: url("https://fonts.googleapis.com/css2?family=Lato&family=Playfair+Display:wght@500;600;700");
 }
+
+h1{
+  font-weight: 700;
+  font-size: 58px;
+  @apply font-playFair;
+}
+h3{
+  font-size: 24px ;
+  font-weight: 600;
+}
+h4{
+  font-size: 18px;
+}
+
+p{
+  @apply font-lato text-[24px] font-normal;
+}
+button{
+  @apply font-lato text-[18px] font-medium rounded-sm bg-slate-950 px-14 py-2 text-white hover:bg-blue-700;
+}
