--- a/src/index.css
+++ b/src/index.css
@@ -7,22 +7,22 @@
   src: url("https://fonts.googleapis.com/css2?family=Lato&family=Playfair+Display:wght@500;600;700");
 }
 
-h1{
-  font-weight: 700;
-  font-size: 58px;
-  @apply font-playFair;
-}
-h3{
-  font-size: 24px ;
-  font-weight: 600;
-}
-h4{
-  font-size: 18px;
+h1 {
+  @apply font-playFair text-[48px] font-normal leading-[3.5rem];
 }
 
-p{
-  @apply font-lato text-[24px] font-normal;
+h2 {
+  @apply font-playFair text-[24px] font-bold;
 }
-button{
-  @apply font-lato text-[18px] font-medium rounded-sm bg-slate-950 px-14 py-2 text-white hover:bg-blue-700;
+
+p {
+  @apply font-lato text-[22px] font-normal;
+}
+
+.btn-solid {
+  @apply font-lato text-[20px] font-bold rounded-md bg-black py-2 text-white hover:bg-white hover:ring-inset hover:ring-[3px] hover:ring-black hover:text-black duration-300;
+}
+
+.btn-outline {
+  @apply font-lato text-[20px] font-bold rounded-md border-[3px] py-2 border-black text-black hover:bg-black hover:text-white duration-300;
 }
