--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ p {
 }
 
 .inputText {
-  @apply rounded border-2 border-slate-800 p-5 font-lato text-[22px] placeholder:text-[#676767];
+  @apply rounded border-2 border-black p-5 font-lato text-[22px] placeholder:text-[#676767];
 }
 
 label {
