--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ label {
 }
 
 .btnOutline {
-  @apply rounded-md border-[3px] border-black py-2 font-lato text-[20px] font-bold text-black duration-300 hover:bg-black hover:text-white;
+  @apply rounded-md border-[3px] border-black font-lato text-[20px] font-bold text-black duration-300 hover:bg-black hover:text-white;
 }
 
 .inputText {
@@ -40,7 +40,7 @@ label {
 }
 
 .btnWeightNormal {
-  @apply font-normal;
+  @apply border-2 font-normal;
 }
 
 .mobileText {
