--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ h2 {
 }
 
 p {
-  @apply font-lato text-[22px] font-normal;
+  @apply font-lato text-[22px] font-normal text-[#616161];
 }
 
 label {
