Changed button styling

--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,7 @@ label {
 .mobileText {
   @apply text-[16px] font-normal;
 }
+
+.btnBudgetSolid {
+  @apply rounded bg-[#F4E2E6] font-lato font-medium text-[#616161] duration-300 hover:bg-[#DDAFB8] hover:text-[#616161];
+}
