--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@ h2 {
   @apply font-playFair text-[24px] font-bold;
 }
 
+h3 {
+  @apply font-lato
+}
+
 p {
   @apply font-lato text-[22px] font-normal text-[#616161];
 }
