--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ h2 {
 }
 
 h3 {
-  @apply font-lato
+  @apply font-lato;
 }
 
 p {
@@ -53,4 +53,8 @@ label {
 
 .btnBudgetSolid {
   @apply rounded bg-[#F4E2E6] font-lato font-medium text-[#616161] duration-300 hover:bg-[#DDAFB8] hover:text-[#616161];
+}
+
+::-webkit-scrollbar {
+  width: 0; /* Set the width to 0 */
 }
