--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ label {
 }
 
 .inputText {
-  @apply rounded border-2 border-[#9E9E9E] font-lato text-[22px] placeholder:text-[#9E9E9E] focus:border-[#6E7C99] focus:outline-none focus:ring-0;
+  @apply rounded border border-[#9E9E9E] font-lato text-[22px] placeholder:text-[#9E9E9E] focus:border-[#6E7C99] focus:outline-none focus:ring-0;
 }
 
 .btnWeightNormal {
@@ -52,5 +52,9 @@ label {
 }
 
 ::-webkit-scrollbar {
-  width: 0; /* Set the width to 0 */
+  width: 0;
+}
+
+.smallerText {
+  @apply text-[14px] font-normal;
 }
