--- a/src/index.css
+++ b/src/index.css
@@ -58,3 +58,8 @@ label {
 .smallerText {
   @apply text-[14px] font-normal;
 }
+
+/* Save this and delete tomorrow */
+.inputField {
+  @apply rounded border-2 border-gray-200 font-lato shadow-md focus:border-[#6E7C99] focus:outline-none focus:ring-0
+}
