--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   font-family: "Playfair Display";
   src:
     local(PlayfairDisplay-Regular),
-    url(./assets/fonts/Playfair_display/PlayfairDisplay-Regular.ttf)
+    url(../src/assets/fonts/Playfair_display/PlayfairDisplay-Regular.ttf)
       format("truetype");
   font-weight: normal;
   font-style: normal;
@@ -17,7 +17,7 @@
   font-family: "Playfair Display";
   src:
     local(PlayfairDisplay-Medium),
-    url(./assets/fonts/Playfair_display/PlayfairDisplay-Medium.ttf)
+    url(../src/assets/fonts/Playfair_display/PlayfairDisplay-Medium.ttf)
       format("truetype");
   font-weight: 500;
   font-style: normal;
@@ -28,7 +28,7 @@
   font-family: "Playfair Display";
   src:
     local(PlayfairDisplay-SemiBold),
-    url(./assets/fonts/Playfair_display/PlayfairDisplay-SemiBold.ttf)
+    url(../src/assets/fonts/Playfair_display/PlayfairDisplay-SemiBold.ttf)
       format("truetype");
   font-weight: 600;
   font-style: normal;
@@ -39,7 +39,7 @@
   font-family: "Playfair Display";
   src:
     local(PlayfairDisplay-Bold),
-    url(./assets/fonts/Playfair_display/PlayfairDisplay-Bold.ttf)
+    url(../src/assets/fonts/Playfair_display/PlayfairDisplay-Bold.ttf)
       format("truetype");
   font-weight: bold;
   font-style: normal;
@@ -50,7 +50,7 @@
   font-family: "Lato";
   src:
     local(Lato-Regular),
-    url(./assets/fonts/Lato/Lato-Regular.ttf) format("truetype");
+    url(../src/assets/fonts/Lato/Lato-Regular.ttf) format("truetype");
   font-weight: normal;
   font-style: normal;
   font-stretch: normal;
@@ -60,7 +60,7 @@
   font-family: "Lato";
   src:
     local(Lato-Bold),
-    url(./assets/fonts/Lato/Lato-Bold.ttf) format("truetype");
+    url(../src/assets/fonts/Lato/Lato-Bold.ttf) format("truetype");
   font-weight: bold;
   font-style: normal;
   font-stretch: normal;
@@ -70,14 +70,10 @@
   font-family: "Lato";
   src:
     local(Lato-Black),
-    url(./assets/fonts/Lato/Lato-Black.ttf) format("truetype");
+    url(../src/assets/fonts/Lato/Lato-Black.ttf) format("truetype");
   font-weight: 900;
   font-style: normal;
   font-stretch: normal;
-}
-
-html {
-  @apply transition-all duration-300
 }
 
 h1 {
