--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,7 @@
 
 @font-face {
   font-family: "Playfair Display";
-  src: local(PlayfairDisplay-Regular),
-    url(/fonts/Playfair_display/PlayfairDisplay-Regular.ttf) format("truetype");
+  src: url(/fonts/Playfair_display/PlayfairDisplay-Regular.ttf) format("truetype");
   font-weight: normal;
   font-style: normal;
   font-stretch: normal;
@@ -13,8 +12,7 @@
 
 @font-face {
   font-family: "Playfair Display";
-  src: local(PlayfairDisplay-Medium),
-    url(/fonts/Playfair_display/PlayfairDisplay-Medium.ttf) format("truetype");
+  src: url(/fonts/Playfair_display/PlayfairDisplay-Medium.ttf) format("truetype");
   font-weight: 500;
   font-style: normal;
   font-stretch: normal;
@@ -22,8 +20,7 @@
 
 @font-face {
   font-family: "Playfair Display";
-  src: local(PlayfairDisplay-SemiBold),
-    url(/fonts/Playfair_display/PlayfairDisplay-SemiBold.ttf) format("truetype");
+  src: url(/fonts/Playfair_display/PlayfairDisplay-SemiBold.ttf) format("truetype");
   font-weight: 600;
   font-style: normal;
   font-stretch: normal;
@@ -31,8 +28,7 @@
 
 @font-face {
   font-family: "Playfair Display";
-  src: local(PlayfairDisplay-Bold),
-    url(/fonts/Playfair_display/PlayfairDisplay-Bold.ttf) format("truetype");
+  src: url(/fonts/Playfair_display/PlayfairDisplay-Bold.ttf) format("truetype");
   font-weight: bold;
   font-style: normal;
   font-stretch: normal;
@@ -40,8 +36,7 @@
 
 @font-face {
   font-family: "Lato";
-  src: local(Lato-Regular),
-    url(/fonts/Lato/Lato-Regular.ttf) format("truetype");
+  src: url(/fonts/Lato/Lato-Regular.ttf) format("truetype");
   font-weight: normal;
   font-style: normal;
   font-stretch: normal;
@@ -49,8 +44,7 @@
 
 @font-face {
   font-family: "Lato";
-  src: local(Lato-Bold),
-    url(/fonts/Lato/Lato-Bold.ttf) format("truetype");
+  src: url(/fonts/Lato/Lato-Bold.ttf) format("truetype");
   font-weight: bold;
   font-style: normal;
   font-stretch: normal;
@@ -58,8 +52,7 @@
 
 @font-face {
   font-family: "Lato";
-  src: local(Lato-Black),
-    url(/fonts/Lato/Lato-Black.ttf) format("truetype");
+  src: url(/fonts/Lato/Lato-Black.ttf) format("truetype");
   font-weight: 900;
   font-style: normal;
   font-stretch: normal;
