--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,10 @@
 
 @font-face {
   font-family: "Playfair Display";
-  src: url(/fonts/Playfair_display/PlayfairDisplay-Regular.ttf) format("truetype");
+  src:
+    local(PlayfairDisplay-Regular),
+    url("/fonts/Playfair_display/PlayfairDisplay-Regular.ttf")
+      format("truetype");
   font-weight: normal;
   font-style: normal;
   font-stretch: normal;
@@ -12,7 +15,9 @@
 
 @font-face {
   font-family: "Playfair Display";
-  src: url(/fonts/Playfair_display/PlayfairDisplay-Medium.ttf) format("truetype");
+  src:
+    local(PlayfairDisplay-Medium),
+    url("/fonts/Playfair_display/PlayfairDisplay-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
   font-stretch: normal;
@@ -20,7 +25,10 @@
 
 @font-face {
   font-family: "Playfair Display";
-  src: url(/fonts/Playfair_display/PlayfairDisplay-SemiBold.ttf) format("truetype");
+  src:
+    local(PlayfairDisplay-SemiBold),
+    url("/fonts/Playfair_display/PlayfairDisplay-SemiBold.ttf")
+      format("truetype");
   font-weight: 600;
   font-style: normal;
   font-stretch: normal;
@@ -28,7 +36,9 @@
 
 @font-face {
   font-family: "Playfair Display";
-  src: url(/fonts/Playfair_display/PlayfairDisplay-Bold.ttf) format("truetype");
+  src:
+    local(PlayfairDisplay-Bold),
+    url("/fonts/Playfair_display/PlayfairDisplay-Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
   font-stretch: normal;
@@ -36,7 +46,9 @@
 
 @font-face {
   font-family: "Lato";
-  src: url(/fonts/Lato/Lato-Regular.ttf) format("truetype");
+  src:
+    local(Lato-Regular),
+    url("/fonts/Lato/Lato-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-stretch: normal;
@@ -44,7 +56,9 @@
 
 @font-face {
   font-family: "Lato";
-  src: url(/fonts/Lato/Lato-Bold.ttf) format("truetype");
+  src:
+    local(Lato-Bold),
+    url("/fonts/Lato/Lato-Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
   font-stretch: normal;
@@ -52,7 +66,9 @@
 
 @font-face {
   font-family: "Lato";
-  src: url(/fonts/Lato/Lato-Black.ttf) format("truetype");
+  src:
+    local(Lato-Black),
+    url("/fonts/Lato/Lato-Black.ttf") format("truetype");
   font-weight: 900;
   font-style: normal;
   font-stretch: normal;
