--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,19 @@
   font-stretch: normal;
 }
 
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+html {
+  @apply no-scrollbar;
+}
+
 h1 {
   @apply font-playFair text-[48px] font-normal leading-[3.5rem];
 }
@@ -118,15 +131,10 @@ label {
   @apply rounded-md bg-[#F4E2E6] font-lato text-[#616161] duration-300 hover:bg-[#DDAFB8];
 }
 
-::-webkit-scrollbar {
-  width: 0;
-}
-
 .smallerText {
   @apply text-[14px] font-normal;
 }
 
-/* Save this and delete tomorrow */
 .inputField {
   @apply rounded border-2 border-gray-200 font-lato shadow-md placeholder:text-[#9E9E9E] focus:border-[#6E7C99] focus:outline-none focus:ring-0;
 }
